fix shaking when show scrollbar

--- a/src/components/BookEditor/BookEditor.module.css
+++ b/src/components/BookEditor/BookEditor.module.css
@@ -19,7 +19,7 @@
 }
 
 .title {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .buttons {
