--- a/src/componentsHelper/CustomInput/CustomInput.module.css
+++ b/src/componentsHelper/CustomInput/CustomInput.module.css
@@ -5,7 +5,7 @@
 
 .title {
   font-weight: bold;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
 }
 
 .input {
