--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+html {
+  margin-left: calc(100vw - 100%);
+  margin-right: 0;
+}
+
 body {
   background-color: #e9f4fe;
   margin: 0;
